improve meta-content and header

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfólio de Raiza Medina - Desenvolvedora Frontend com experiência em React, TypeScript, CSS e Redux. Explore projetos, tecnologias e entre em contato!"
+      content="Raiza Medina | Frontend Developer | React, TypeScript, CSS, Redux. Showcasing modern projects and best coding practices. Let's connect!"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Raiza Medina
